--- a/frontend/mission-ops/src/app/create-pass/create-pass.component.html
+++ b/frontend/mission-ops/src/app/create-pass/create-pass.component.html
@@ -27,7 +27,7 @@
       </div>
     </div>
     <div class="modal-footer">
-      <button class = "btn btn-success"
+      <button class = "btn btn-outline-success"
               [disabled] = "!createPassForm.valid">
                 Add Pass
       </button>
