Super tiny tweak for edit/save button styling

--- a/frontend/mission-ops/src/app/modify-user/modify-user.component.html
+++ b/frontend/mission-ops/src/app/modify-user/modify-user.component.html
@@ -36,7 +36,7 @@
         </div>
         <app-alert [alertStyle]="'danger'" #generalAlert></app-alert>
         <div class = "btn-group">
-          <button (click)="saveChanges()" class="btn btn-outline-primary">
+          <button (click)="saveChanges()" class="btn btn-outline-info">
               Save Changes
               <span *ngIf="processing" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
             </button>
