--- a/frontend/mission-ops/src/app/queues/queues.component.html
+++ b/frontend/mission-ops/src/app/queues/queues.component.html
@@ -1,4 +1,4 @@
-<h2 class="mb-3">Queues</h2>
+<h2 class="mb-3">Queue</h2>
 <div class = "row">
   <div class = "col">
       <div class="btn-group" role="group">
