sarahs changes to font, favicon, logout btn

--- a/frontend/mission-ops/src/app/header/header.component.html
+++ b/frontend/mission-ops/src/app/header/header.component.html
@@ -33,7 +33,7 @@
           </div>
         </li>
         <li class = "nav-item">
-          <a class="nav-link" routerLink="/logout"><i class='fa fa-power-off'></i></a>
+          <a class="nav-link" routerLink="/logout">Logout</a>
         </li>
       </ng-template>
     </ul>
