--- a/frontend/mission-ops/src/app/header/header.component.scss
+++ b/frontend/mission-ops/src/app/header/header.component.scss
@@ -1,9 +1,7 @@
 .navbar-brand {
-    font-family: 'Libre Baskerville', serif;
+    font-family: 'Poppins', sans-serif;
     font-size: 1.4rem;
-    font-weight: bold;
 }
-
 * {
     font-size: 1rem;
 }
