--- a/frontend/mission-ops/src/styles.scss
+++ b/frontend/mission-ops/src/styles.scss
@@ -4,14 +4,19 @@
 @import '~ngx-toastr/toastr.css';
 @import "~ng-pick-datetime/assets/style/picker.min.css";
 @import url('https://fonts.googleapis.com/css?family=Libre+Baskerville|Gothic+A1');
+@import url('https://fonts.googleapis.com/css?family=Poppins:400,600');
+@import url('https://fonts.googleapis.com/css?family=Work+Sans');
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro');
+@import url('https://fonts.googleapis.com/css?family=Rakkas');
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans:400,700');
 
 * {
     h1, h2, h3, h4, h5, h6 {
-        font-family: 'Libre Baskerville', serif;
+        font-family: 'Poppins', sans-serif;
     }
-    font-family: 'Gothic A1', sans-serif;
+    font-family: 'Noto Sans', sans-serif;
     b {
-        font-family: 'Gothic A1 Semi-Bold', sans-serif;
+        font-family: 'Poppins Semi-Bold', sans-serif;
     }
 }
 
