Documented chart, component-list components
- COMMENTING FOREVER

--- a/frontend/mission-ops/src/app/component-list/component-list.component.scss
+++ b/frontend/mission-ops/src/app/component-list/component-list.component.scss
@@ -1,3 +1,5 @@
+// Makes the Component selection distinguishable from
+// the regular primary active colour.
 .card-body > .active {
     background: #add8e6;
 }
