Documented footer, header, execution queue

--- a/frontend/mission-ops/src/app/footer/footer.component.scss
+++ b/frontend/mission-ops/src/app/footer/footer.component.scss
@@ -1,3 +1,5 @@
+// Footer specific styling, to act as a
+// sticky footer that pushes down with new content.
 * {
     background-color: #343a40;;
     height: 50px;
